links and statis files

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,8 +11,9 @@
             <a class="navbar-brand" href="/"> Watchlist</a>  
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav"></ul>
+            <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+            </ul>
         </div>
     </div>
 </div>
