--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -5,10 +5,10 @@
             <img src="{{ movie.poster }}" alt="{{ movie.title }} poster" class="img-responsive">
             <li class="text-center">
                 <a href="/movie/{{movie.id}}">
-                {{movie.title|truncate(10)}}
-                </a>
+                    {{ movie.title|truncate(10)}}</a>
             </li>
         </div>
-    {% endfor%}
+
+    {% endfor %}
 
 {% endmacro %}
